--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <h1>becas widget samples</h1>
 
-    <p>This is a sample host page showcasing 2 embedded becas widgets.</p>
-    <p>Read more about the widget in the <a href="http://bioinformatics.ua.pt/becas/widget">docs</a>.</p>
+    <p>This is a sample host page showcasing 2 embedded <a href="http://bioinformatics.ua.pt/becas/widget">becas widgets</a>.</p>
+    <p>You can view the source of this page directly or on <a href="http://github.com/tnunes/becas-widget">github</a>.</p>
 
     <h3>Text annotation</h3>
     <!-- Container to hold one widget -->
