--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" value="IE=edge,chrome=1" />
     <title>becas widget samples</title>
+    <link href="favicon.ico" rel="shortcut icon">
 
     <style type="text/css">
         body {
