Change embed script to use protocol relative URL (to support https pages)

--- a/examples.html
+++ b/examples.html
@@ -34,7 +34,7 @@
     <div id="becas-widget-pmid" class="widget-container"></div>
 
     <!-- Include the widget embedding script -->
-    <script src="http://bioinformatics.ua.pt/becas/embed-widget.js"></script>
+    <script src="//bioinformatics.ua.pt/becas/embed-widget.js"></script>
     <!-- Use the widgets -->
     <script>
         // Initialize widget
