Update sample page source URL.

--- a/examples.html
+++ b/examples.html
@@ -21,7 +21,7 @@
     <h1>becas widget samples</h1>
 
     <p>This is a sample host page showcasing 2 embedded <a href="http://bioinformatics.ua.pt/becas/widget">becas widgets</a>.</p>
-    <p>You can view the source of this page directly or on <a href="http://github.com/tnunes/becas-widget">github</a>.</p>
+    <p>You can view the source of this page directly or on <a href="http://github.com/tnunes/becas-widget/blob/master/examples.html">github</a>.</p>
 
     <h3>Text annotation</h3>
     <!-- Container to hold one widget -->
